# tarefa-freertos-1-Muniz2811

./: CMakeLists.txt  README.md
include/: FreeRTOSConfig.h
src/: main.c
